--- a/index.html
+++ b/index.html
@@ -525,11 +525,272 @@ class="frame relative w-[600px] h-[500px]
 </div></div></div></div></div></div>
     </section>
 
-    <section id="section-2" class="relative min-h-[700px] bg-gray-800 text-white flex items-center justify-center pt-32">
-        <h2 class="text-4xl font-bold">Section 2: More Content</h2>
+    <section id="section-2" class="relative min-h-[1460px] bg-gray-800 pt-32">
+    <div class="grid-background">
+<div class="max-w-6xl w-full bg-[#0D0D0D] rounded-xl shadow-lg p-8 md:p-12 relative z-10">
+<div class="text-start absolute top-[5px] left-[130px] md:top-[10px] md:left-[165px] md:h-[50px] md:w-[600px]">
+<h1 class="text-3xl md:text-5xl font-bold leading-tight mb-1 text-transparent bg-clip-text bg-gradient-to-tl from-slate-800 via-blue-400 to-zinc-400">
+  Work together.
+</h1>
+<h1 class="text-3xl md:text-5xl font-bold leading-tight mb-5 text-transparent bg-clip-text bg-gradient-to-tl from-slate-800 via-blue-400 to-zinc-400">
+  Like in the office.
+</h1>
+<p class="text-lg md:text-xl max-w-3xl mx-auto"style="color: #A0A0A0;">
+Create customized virtual office spaces for any department or event with high quality audio and video conferencing.
+</p>
+</div>
+<div class="relative sm:absolute sm:h-[200px] sm:w-[360px] sm:top-[50px] sm:left-[-30px]
+            md:absolute md:top-[50px] md:left-[-40px] md:w-[1000px] items-center">
+  <img
+    src="fbox.png"
+    alt="Wall Box"
+    class="md:absolute md:h-[725px] md:w-[1000px] wallbox
+      z-2
+      filter brightness-125 contrast-125 saturate-125"
+    style="filter: brightness(1.2) contrast(1.2) saturate(1.3);"
+  />
+</div>
+<div class="relative sm:absolute sm:h-[320px] sm:w-[360px] sm:top-[60px] sm:left-[30px] md:absolute md:h-[400px] md:w-[550px] md:top-[235px] md:left-[245px] items-center perspective-[800px]">
+<main>
+    <article>
+      <!--─ “3D” Checkbox (only control left) ──────────────────────────────────-->
+      <div class="controls">
+        <label for="dimension">3D</label>
+        <input type="checkbox" id="dimension" checked />
+      </div>
+
+      <!--─ MAIN VISUAL “WINDOW” ────────────────────────────────────────────────-->
+      <div class="window">
+        <div class="scene">
+          <ul class="grid">
+            <!-- Each <li> will animate in a vertical loop; hover pops it forward -->
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <!-- Example SVG icon (replace with your own) -->
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M17.834 6.166a8.25 8.25 0 1 0 0 11.668.75.75 0 0 1 1.06 1.06c-3.807 3.808-9.98 3.808-13.788 0-3.808-3.807-3.808-9.98 0-13.788 3.807-3.808 9.98-3.808 13.788 0A9.722 9.722 0 0 1 21.75 12c0 .975-.296 1.887-.809 2.571-.514.685-1.28 1.179-2.191 1.179-.904 0-1.666-.487-2.18-1.164a5.25 5.25 0 1 1-.82-6.26V8.25a.75.75 0 0 1 1.5 0V12c0 .682.208 1.27.509 1.671.3.401.659.579.991.579.332 0 .69-.178.991-.579.3-.4.509-.99.509-1.671a8.222 8.222 0 0 0-2.416-5.834ZM15.75 12a3.75 3.75 0 1 0-7.5 0 3.75 3.75 0 0 0 7.5 0Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">INDOX</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M10.5 3.798v5.02a3 3 0 0 1-.879 2.121l-2.377 2.377a9.845 9.845 0 0 1 5.091 1.013 8.315 8.315 0 0 0 5.713.636l.285-.071-3.954-3.955a3 3 0 0 1-.879-2.121v-5.02a23.614 23.614 0 0 0-3 0Zm4.5.138a.75.75 0 0 0 .093-1.495A24.837 24.837 0 0 0 12 2.25a25.048 25.048 0 0 0-3.093.191A.75.75 0 0 0 9 3.936v4.882a1.5 1.5 0 0 1-.44 1.06l-6.293 6.294c-1.62 1.621-.903 4.475 1.471 4.88 2.686.46 5.447.698 8.262.698 2.816 0 5.576-.239 8.262-.697 2.373-.406 3.092-3.26 1.47-4.881L15.44 9.879A1.5 1.5 0 0 1 15 8.818V3.936Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Creative</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Performant</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M6.32 2.577a49.255 49.255 0 0 1 11.36 0c1.497.174 2.57 1.46 2.57 2.93V21a.75.75 0 0 1-1.085.67L12 18.089l-7.165 3.583A.75.75 0 0 1 3.75 21V5.507c0-1.47 1.073-2.756 2.57-2.93Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Bookmark</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M5.337 21.718a6.707 6.707 0 0 1-.533-.074.75.75 0 0 1-.44-1.223 3.73 3.73 0 0 0 .814-1.686c.023-.115-.022-.317-.254-.543C3.274 16.587 2.25 14.41 2.25 12c0-5.03 4.428-9 9.75-9s9.75 3.97 9.75 9c0 5.03-4.428 9-9.75 9-.833 0-1.643-.097-2.417-.279a6.721 6.721 0 0 1-4.246.997Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Share</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M14.447 3.026a.75.75 0 0 1 .527.921l-4.5 16.5a.75.75 0 0 1-1.448-.394l4.5-16.5a.75.75 0 0 1 .921-.527ZM16.72 6.22a.75.75 0 0 1 1.06 0l5.25 5.25a.75.75 0 0 1 0 1.06l-5.25 5.25a.75.75 0 1 1-1.06-1.06L21.44 12l-4.72-4.72a.75.75 0 0 1 0-1.06Zm-9.44 0a.75.75 0 0 1 0 1.06L2.56 12l4.72 4.72a.75.75 0 0 1-1.06 1.06L.97 12.53a.75.75 0 0 1 0-1.06l5.25-5.25a.75.75 0 0 1 1.06 0Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">CSS!</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M2.25 5.25a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3V15a3 3 0 0 1-3 3h-3v.257c0 .597.237 1.17.659 1.591l.621.622a.75.75 0 0 1-.53 1.28h-9a.75.75 0 0 1-.53-1.28l.621-.622a2.25 2.25 0 0 0 .659-1.59V18h-3a3 3 0 0 1-3-3V5.25Zm1.5 0v7.5a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5v-7.5a1.5 1.5 0 0 0-1.5-1.5H5.25a1.5 1.5 0 0 0-1.5 1.5Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Responsive</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25ZM12.75 6a.75.75 0 0 0-1.5 0v.816a3.836 3.836 0 0 0-1.72.756c-.712.566-1.112 1.35-1.112 2.178 0 .829.4 1.612 1.113 2.178.502.4 1.102.647 1.719.756v2.978a2.536 2.536 0 0 1-.921-.421l-.879-.66a.75.75 0 0 0-.9 1.2l.879.66c.533.4 1.169.645 1.821.75V18a.75.75 0 0 0 1.5 0v-.81a4.124 4.124 0 0 0 1.821-.749c.745-.559 1.179-1.344 1.179-2.191 0-.847-.434-1.632-1.179-2.191a4.122 4.122 0 0 0-1.821-.75V8.354c.29.082.559.213.786.393l.415.33a.75.75 0 0 0 .933-1.175l-.415-.33a3.836 3.836 0 0 0-1.719-.755V6Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Profit</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="m11.645 20.91-.007-.003-.022-.012a15.247 15.247 0 0 1-.383-.218 25.18 25.18 0 0 1-4.244-3.17C4.688 15.36 2.25 12.174 2.25 8.25 2.25 5.322 4.714 3 7.688 3A5.5 5.5 0 0 1 12 5.052 5.5 5.5 0 0 1 16.313 3c2.973 0 5.437 2.322 5.437 5.25 0 3.925-2.438 7.111-4.739 9.256a25.175 25.175 0 0 1-4.244 3.17 15.247 15.247 0 0 1-.383.219l-.022.012-.007.004-.003.001a.752.752 0 0 1-.704 0l-.003-.001Z"/>
+                  </svg>
+                </div>
+                <div class="item__text">Like</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path fill-rule="evenodd"
+                      d="M12 1.5a.75.75 0 0 1 .75.75V4.5a.75.75 0 0 1-1.5 0V2.25A.75.75 0 0 1 12 1.5ZM5.636 4.136a.75.75 0 0 1 1.06 0l1.592 1.591a.75.75 0 0 1-1.061 1.06l-1.591-1.59a.75.75 0 0 1 0-1.061Zm12.728 0a.75.75 0 0 1 0 1.06l-1.591 1.592a.75.75 0 0 1-1.06-1.061l1.59-1.591a.75.75 0 0 1 1.061 0Zm-6.816 4.496a.75.75 0 0 1 .82.311l5.228 7.917a.75.75 0 0 1-.777 1.148l-2.097-.43 1.045 3.9a.75.75 0 0 1-1.45.388l-1.044-3.899-1.601 1.42a.75.75 0 0 1-1.247-.606l.569-9.47a.75.75 0 0 1 .554-.68ZM3 10.5a.75.75 0 0 1 .75-.75H6a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 10.5Zm14.25 0a.75.75 0 0 1 .75-.75h2.25a.75.75 0 0 1 0 1.5H18a.75.75 0 0 1-.75-.75Zm-8.962 3.712a.75.75 0 0 1 0 1.061l-1.591 1.591a.75.75 0 1 1-1.061-1.06l1.591-1.592a.75.75 0 0 1 1.06 0Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Hover</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M9.375 3a1.875 1.875 0 0 0 0 3.75h1.875v4.5H3.375A1.875 1.875 0 0 1 1.5 9.375v-.75c0-1.036.84-1.875 1.875-1.875h3.193A3.375 3.375 0 0 1 12 2.753a3.375 3.375 0 0 1 5.432 3.997h3.943c1.035 0 1.875.84 1.875 1.875v.75c0 1.036-.84 1.875-1.875 1.875H12.75v-4.5h1.875a1.875 1.875 0 1 0-1.875-1.875V6.75h-1.5V4.875C11.25 3.839 10.41 3 9.375 3ZM11.25 12.75H3v6.75a2.25 2.25 0 0 0 2.25 2.25h6v-9ZM12.75 12.75v9h6.75a2.25 2.25 0 0 0 2.25-2.25v-6.75h-9Z"/>
+                  </svg>
+                </div>
+                <div class="item__text">Gift</div>
+              </div>
+            </li>
+            <li>
+              <div class="item">
+                <div class="item__icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
+                    <path d="M17.004 10.407c.138.435-.216.842-.672.842h-3.465a.75.75 0 0 1-.65-.375l-1.732-3c-.229-.396-.053-.907.393-1.004a5.252 5.252 0 0 1 6.126 3.537ZM8.12 8.464c.307-.338.838-.235 1.066.16l1.732 3a.75.75 0 0 1 0 .75l-1.732 3c-.229.397-.76.5-1.067.161A5.23 5.23 0 0 1 6.75 12a5.23 5.23 0 0 1 1.37-3.536ZM10.878 17.13c-.447-.098-.623-.608-.394-1.004l1.733-3.002a.75.75 0 0 1 .65-.375h3.465c.457 0 .81.407.672.842a5.252 5.252 0 0 1-6.126 3.539Z"/>
+                    <path fill-rule="evenodd"
+                      d="M21 12.75a.75.75 0 1 0 0-1.5h-.783a8.22 8.22 0 0 0-.237-1.357l.734-.267a.75.75 0 1 0-.513-1.41l-.735.268a8.24 8.24 0 0 0-.689-1.192l.6-.503a.75.75 0 1 0-.964-1.149l-.6.504a8.3 8.3 0 0 0-1.054-.885l.391-.678a.75.75 0 1 0-1.299-.75l-.39.676a8.188 8.188 0 0 0-1.295-.47l.136-.77a.75.75 0 0 0-1.477-.26l-.136.77a8.36 8.36 0 0 0-1.377 0l-.136-.77a.75.75 0 1 0-1.477.26l.136.77c-.448.121-.88.28-1.294.47l-.39-.676a.75.75 0 1 0-1.3.75l.392.678a8.29 8.29 0 0 0-1.054.885l-.6-.504a.75.75 0 1 0-.965 1.149l.6.503a8.243 8.243 0 0 0-.689 1.192L3.8 8.216a.75.75 0 1 0-.513 1.41l.735.267a8.222 8.222 0 0 0-.238 1.356h-.783a.75.75 0 0 0 0 1.5h.783c.042.464.122.917.238 1.356l-.735.268a.75.75 0 0 0 .513 1.41l.735-.268c.197.417.428.816.69 1.191l-.6.504a.75.75 0 0 0 .963 1.15l.601-.505c.326.323.679.62 1.054.885l-.392.68a.75.75 0 0 0 1.3.75l.39-.679c.414.192.847.35 1.294.471l-.136.77a.75.75 0 0 0 1.477.261l.137-.772a8.332 8.332 0 0 0 1.376 0l.136.772a.75.75 0 1 0 1.477-.26l-.136-.771a8.19 8.19 0 0 0 1.294-.47l.391.677a.75.75 0 0 0 1.3-.75l-.393-.679a8.29 8.29 0 0 0 1.054-.885l.601.504a.75.75 0 0 0 .964-1.15l-.6-.503c.261-.375.492-.774.69-1.191l.735.267a.75.75 0 1 0 .512-1.41l-.734-.267c.115-.439.195-.892.237-1.356h.784Zm-2.657-3.06a6.744 6.744 0 0 0-1.19-2.053 6.784 6.784 0 0 0-1.82-1.51A6.705 6.705 0 0 0 12 5.25a6.8 6.8 0 0 0-1.225.11 6.7 6.7 0 0 0-2.15.793 6.784 6.784 0 0 0-2.952 3.489.76.76 0 0 1-.036.098A6.74 6.74 0 0 0 5.251 12a6.74 6.74 0 0 0 3.366 5.842l.009.005a6.704 6.704 0 0 0 2.18.798l.022.003a6.792 6.792 0 0 0 2.368-.004 6.704 6.704 0 0 0 2.205-.811 6.785 6.785 0 0 0 1.762-1.484l.009-.01.009-.01a6.743 6.743 0 0 0 1.18-2.066c.253-.707.39-1.469.39-2.263a6.74 6.74 0 0 0-.408-2.309Z"
+                      clip-rule="evenodd"/>
+                  </svg>
+                </div>
+                <div class="item__text">Configurable</div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </article>
+  </main>
+ <script>
+    const dimensionCheckbox = document.querySelector("#dimension");
+    dimensionCheckbox.addEventListener("change", () => {
+    });
+          </script>
+<!--new replacement Card end here-->
+</div>
+          <div class="flex flex-col gap-4 w-full lg:w-1/4">
+          <div class="text-white text-sm space-y-4 lg:hidden">
+          <div class="text-left">[ Lounge ]</div>
+          <div class="text-left">[ All hand ]</div>
+          </div>
+          </div>
+</div>
+<div class="relative sm:absolute sm:h-[200px] sm:w-[300px] sm:top-[350px] sm:left-[0px] md:absolute md:h-[750px] md:w-[750px] md:top-[820px] md:left-[100px] items-center">
+
+  <div class="text-center mb-16">
+  <p class="text-lg md:text-xl max-w-3xl mx-auto"style="color: #A0A0A0;">
+   Collaborating with remote teams is easy in your virtual office environment. Enjoy real-time communication within your workspace without additional software hassle.
+  </p></div></div>
+
+  <div class="relative absolute text-center sm:top-[250px] sm:left-[0px] md:absolute md:top-[1000px] md:left-[35px] md:w-[900px] md:h-[50px] ">
+  <div class="flex flex-col md:flex-row items-start justify-center gap-6 px-4 py-8">
+  <!-- Card 1 -->
+  <div class="flex flex-col items-start p-6 shadow-[0px_20px_207px_10px_rgba(165,_39,_255,_0.48)] text-left">
+    <div class="text-blue-600 mb-4">
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+           stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+           class="lucide lucide-layout-grid">
+        <rect width="18" height="18" x="3" y="3" rx="2" ry="2"/>
+        <line x1="3" x2="21" y1="9" y2="9"/>
+        <line x1="3" x2="21" y1="15" y2="15"/>
+        <line x1="9" x2="9" y1="3" y2="21"/>
+        <line x1="15" x2="15" y1="3" y2="21"/>
+      </svg>
+</div>
+<h3 class="text-xl font-semibold text-gray-900 mb-2">Customize workspace</h3>
+<p class="text-gray-600">
+      Create your own offices and meeting rooms to suit your team's needs.
+</p>
+</div>
+
+  <!-- Card 2 -->
+  <div class="flex flex-col items-start p-6 text-left">
+    <div class="text-blue-600 mb-4">
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+           stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+           class="lucide lucide-video">
+        <path d="m22 8-6 4 6 4V8Z"/>
+        <rect width="14" height="12" x="2" y="6" rx="2" ry="2"/>
+      </svg>
+    </div>
+    <h3 class="text-xl font-semibold text-gray-900 mb-2">Audio and video calls</h3>
+    <p class="text-gray-600">
+      Collaborate efficiently and seamlessly with high quality virtual conferencing.
+    </p>
+  </div>
+
+  <!-- Card 3 -->
+  <div class="flex flex-col items-start p-6 shadow-[0px_20px_207px_10px_rgba(165,_39,_255,_0.48)] text-left">
+    <div class="text-blue-600 mb-4">
+      <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24" fill="none"
+           stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+           class="lucide lucide-user-plus">
+<path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/>
+<circle cx="9" cy="7" r="4"/>
+<line x1="19" x2="19" y1="8" y2="14"/>
+<line x1="22" x2="16" y1="11" y2="11"/>
+</svg>
+</div>
+<h3 class="text-xl font-semibold text-gray-900 mb-2">Invite guests</h3>
+<p class="text-gray-600">
+      Meet with guests without ever needing to leave your workspace.
+</p>
+</div>
+</div> 
+</div></div>
     </section>
 
-    <section id="section-3" class="relative min-h-[700px] bg-gray-700 text-white flex items-center justify-center pt-32">
+    <section id="section-3" class="relative min-h-[700px] bg-gray-700 pt-32">
         <h2 class="text-4xl font-bold">Section 3: Transition</h2>
     </section>
 
