--- a/index.html
+++ b/index.html
@@ -1024,8 +1024,8 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
 </div>
 </section>
 
-<section id="section-5" class="relative min-h-[2000px] bg-gray-900">
-<div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 space-y-32">
+<section id="section-4" class="relative min-h-[2200px] bg-[#0D0D0D] text-white overflow-hidden pt-32">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16 space-y-32">
             <div class="text-sm font-semibold text-gray-400 uppercase tracking-wider mb-8">
                 [ PRODUCTS ]
             </div>
@@ -1276,8 +1276,9 @@ class="sm:hidden absolute inset-0 w-full h-full object-cover rounded-2xl shadow-
                 </div>
             </div>
             <!-- Developer Docs Section End -->
-</div>
-</section>
+
+        </div>
+    </section>
 <script>
         // JS for the API section animation
         // Renamed IDs to be unique to avoid conflicts and ensure correct targeting
